unpackaged/main/default/objects/bt_stripe__Transaction_Field__c/bt_stripe__Transaction_Field__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the list of custom parents for a Transaction.</description>
    <label>Blackthorn Pay - Transaction Parents</label>
</CustomObject>