unpackaged/main/default/objects/bt_stripe__Transaction_Field__c/fields/bt_stripe__Terminal_Icon__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Terminal_Icon__c</fullName>
    <description>Sets the Icon shown in the Terminal for this Parent Object type. Must follow the Lightning Design System name conventions. For example: custom:custom19</description>
    <inlineHelpText>Sets the Icon shown in the Terminal for this Parent Object type. Must follow the Lightning Design System name conventions. For example: custom:custom19</inlineHelpText>
    <label>Terminal Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>