unpackaged/main/default/objects/bt_stripe__Transaction_Field__c/fields/bt_stripe__Transaction_Field__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Transaction_Field__c</fullName>
    <label>Transaction Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>