unpackaged/main/default/objects/bt_stripe__Transaction_Field__c/fields/bt_stripe__Use_Default_Transfer_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Use_Default_Transfer_Group_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this transaction parent&#39;s Salesforce record ID will be used to populate the Transfer Group ID on creation of the record.</description>
    <inlineHelpText>When checked, this transaction parent&#39;s Salesforce record ID will be used to populate the Transfer Group ID on creation of the record.</inlineHelpText>
    <label>Use Default Transfer Group ID</label>
    <type>Checkbox</type>
</CustomField>