unpackaged/main/default/objects/bt_stripe__Transaction_Field__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Transaction_Field__c</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>bt_stripe__Terminal_Icon__c</columns>
    <columns>bt_stripe__Use_Default_Transfer_Group_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>